--- a/BIOCHIMIE_CLINIQUE_S1_Examen_de_cour2.html
+++ b/BIOCHIMIE_CLINIQUE_S1_Examen_de_cour2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Examen de prélèvements en biochimie partie 1 - GhaniPharma</title>
+    <title>Examen de prélèvements en biochimie partie 2 - GhaniPharma</title>
     <!-- إضافة Font Awesome للأيقونات -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -605,9 +605,9 @@
     <!-- المحتوى الرئيسي -->
     <div class="main-content">
         <div class="exam-header">
-            <h1 class="exam-title">Examen de prélèvements en biochimie partie 1</h1>
+            <h1 class="exam-title">Examen de prélèvements en biochimie partie 2</h1>
             <div class="exam-description">
-                Test QCM sur les techniques de prélèvement en biochimie. L'examen se compose de 20 questions à choix multiples. Vous avez 40 minutes pour répondre à toutes les questions.
+                Test QCS sur les techniques de prélèvement en biochimie. L'examen se compose de 20 questions. Vous avez 40 minutes pour répondre à toutes les questions.
             </div>
         </div>
         
