--- a/BIOCHIMIE_CLINIQUE_S1_Examen_de_cour1.html
+++ b/BIOCHIMIE_CLINIQUE_S1_Examen_de_cour1.html
@@ -607,7 +607,7 @@
         <div class="exam-header">
             <h1 class="exam-title">Examen de prélèvements en biochimie partie 1</h1>
             <div class="exam-description">
-                Test QCM sur les techniques de prélèvement en biochimie. L'examen se compose de 20 questions à choix multiples. Vous avez 40 minutes pour répondre à toutes les questions.
+                Test QCS sur les techniques de prélèvement en biochimie. L'examen se compose de 20 questions. Vous avez 40 minutes pour répondre à toutes les questions.
             </div>
         </div>
         
