--- a/BIOCHIMIE_CLINIQUE_S1.html
+++ b/BIOCHIMIE_CLINIQUE_S1.html
@@ -535,7 +535,7 @@
                         <button class="resource-btn pdf-btn" onclick="window.open('https://drive.google.com/file/d/1aWWeZm1CUV7swlHWkKhBv1yGEK2Wnozo/view?usp=sharing', '_blank'); event.stopPropagation();">
                             <i class="fas fa-file-pdf"></i> PDF
                         </button>
-                        <button class="resource-btn video-btn">
+                        <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/16NeKIe-O8QpUbnOEgJ9KUc9l3TbJxtvA/view?usp=sharing', '_blank'); event.stopPropagation();">
                             <i class="fas fa-video"></i> VIDÉO
                         </button>
                         <button class="resource-btn exam-btn" onclick="window.location.href='BIOCHIMIE_CLINIQUE_S1_Examen_de_cour1.html'">
