--- a/BIOCHIMIE_CLINIQUE_S1.html
+++ b/BIOCHIMIE_CLINIQUE_S1.html
@@ -551,10 +551,10 @@
                         <i class="fas fa-chevron-down"></i>
                     </div>
                     <div class="resources-options">
-                        <button class="resource-btn pdf-btn" onclick="window.open('https://drive.google.com/file/d/1aWWeZm1CUV7swlHWkKhBv1yGEK2Wnozo/view?usp=sharing', '_blank'); event.stopPropagation();">
+                        <button class="resource-btn pdf-btn" onclick="window.open('https://drive.google.com/file/d/1CSsW5B1bdWbKjvGyk_ciRSCAqPq0ec04/view?usp=sharing', '_blank'); event.stopPropagation();">
                             <i class="fas fa-file-pdf"></i> PDF
                         </button>
-                        <button class="resource-btn video-btn">
+                        <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1B7e-qHLDyqzaAOtZrCKcL0dacpmrejvC/view?usp=sharing', '_blank'); event.stopPropagation();">
                             <i class="fas fa-video"></i> VIDÉO
                         </button>
                         <button class="resource-btn exam-btn" onclick="window.location.href='BIOCHIMIE_CLINIQUE_S1_Examen_de_cour2.html'">
